--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -11,12 +11,29 @@
 
 .taskCard {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   gap: 20px;
 
-  padding: 20px;
+  padding: 10px 20px;
 
   background-color: white;
   border-radius: 15px;
+}
+
+.leftElement,
+.rightElement {
+  display: flex;
+  gap: 10px;
+}
+
+.btnRemoveTaskContainer img {
+  background-image: url('../assets/images/remove.png');
+  background-size: cover;
+  width: 20px;
+  height: 20px;
+
+  border-radius: 100%;
 }
 
 .addTasksContainer {
